cpp/src/arrow/dataset/file_parquet.cc
@@ -569,7 +569,7 @@ Result<FragmentVector> ParquetFileFragment::SplitByRowGroup(
   for (auto&& row_group : row_groups) {
     ARROW_ASSIGN_OR_RAISE(*fragment++,
                           parquet_format_.MakeFragment(source_, partition_expression(),
-                                                       {std::move(row_group)}));
+                                                       {std::move(row_group)}, physical_schema_));
   }
 
   return fragments;
